2008-03-02
showstoppers for 0.2.0.0
  - update GtkamlCompiler with latest ValaCompiler changes (create a .patch)
  - check my version against source version
  - use user data directories
  - cast gtkaml:existing expressions to the tag type
ETA 1 day


2008-03-02
  - finished adding default values to *.implicits
  - fixed vala-0.1.7 compile errors

2008-03-02
  - finished adding default values to *.implicits
  - fixed vala-0.1.7 compile errors


2008-02-28
  - renamed gtkaml:reference to gtkaml:existing
  - introduced gtkaml:standalone

2008-02-21
  - added gtkaml:implements
  - allow hyphen-separated attributes
  - adding ImplicitsStore to resolve symbols from multiple *.implicits files

2008-02-20
  - changed gtkaml:construct and preconstruct behaviour to match signals'

2008-02-11
  - added support for gtkaml:construct and gtkaml:preconstruct attrs
    Construct goes after all the children have been added, and
    preconstruct goes right before the element has been created 
    (or, in the case of root, right before setting the minimum
    attributes of the base creation method)

2008-02-10
  - bumped version to 0.2.0.0
  - removed dependency between SAXParser and CodeGenerator (moved
    the parse/resolve/generate 'process' in Gtkaml.Parser)
  - enforced specifying the constructor parameters for the root tag

2008-02-08
  - fixed a segfault where a g_strjoinv () was called without a last NULL
  - fixed bug with signals handling that missed most parameters

2008-02-06
  - added TreeViewColumn 'adds' in implicits.ini  
	- added reference tags (see goals for 0.2)	
	- changed ',' into ';' in implicits.ini for TreeView

2008-02-05
gtkaml 0.1.1.0 release
	- added the Gtk.MenuItem in implicits.ini with 'new' parameter 'label'
	- fixed an issue when loooking up for constructor parameters' type
	- fixed a bug (#1) which prevented a widget from a namespace to be 
	  added into a container from another namespace (and viceversa)