@@ -51,12 +51,6 @@
 		comments="Simple .Net demonstration program, displays a text file in a scrolling text box and allows the user to toggle word-wrap on and off"
 		website="http://www.michaelwerle.com/SimpleViewer2/" 
 		authors='{new string[] {"Michael Werle (micha@michaelwerle.com)", "ported to gtkaml by Vlad Grecescu (b100dian@gmail.com)", null}}'>
-		<VBox class:standalone="true" class:existing="(aboutdialog1.vbox as VBox)">
-			<!-- add more stuff here? -->
-		</VBox>	
-		<HButtonBox class:standalone="true" class:existing="(aboutdialog1.action_area as HButtonBox)">
-			<!-- add more buttons here? -->
-		</HButtonBox>
 	</AboutDialog>			
 
 <![CDATA[
